fixed IE compatability and Chrome on iOS

--- a/Winter Holiday eCard 2018/html/style/style.css
+++ b/Winter Holiday eCard 2018/html/style/style.css
@@ -9,6 +9,10 @@ a {
   transition: .3s;
 }
 
+.canvas-container {
+  display: none;
+}
+
 .accent {
   color: #50C2EF;
 }
